--- a/data-review-assignment/package.json
+++ b/data-review-assignment/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "next": "14.2.8",
+    "papaparse": "^5.4.1",
     "react": "^18",
     "react-dom": "^18"
   },
